@@ -10,6 +10,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.domain.Sort.Order;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -21,31 +22,37 @@ public class RestCriteriaConstructor implements CriteriaConstructor, Serializabl
 
         T instance;
         try {
-            instance = criteriaClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            instance = criteriaClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new IllegalArgumentException(e);
         }
         if (instance instanceof RestCriteria) {
             List<Order> sortings = new ArrayList<>();
-            Sort.Direction direction = null;
             for (Sorting sorting : criteria.getSortings()) {
-                if(sorting.getDirection().equals(Direction.ASC))
-                    direction = Sort.Direction.ASC;
-                if(sorting.getDirection().equals(Direction.DESC))
-                    direction = Sort.Direction.DESC;
-                if (("name").equals(sorting.getField()))
-                    sortings.add(new Order(direction, "passport." + sorting.getField()));
-                else
-                    sortings.add(new Order(direction,  sorting.getField()));
+                sortings.add(toOrder(sorting));
             }
             ((RestCriteria) instance).setOrders(sortings);
             ((RestCriteria) instance).setPageSize(criteria.getSize());
             ((RestCriteria) instance).setPageNumber(criteria.getPage() - 1);
-        }else if (instance instanceof Criteria) {
+        } else if (instance instanceof Criteria) {
             ((Criteria) instance).setSorting(criteria.getSorting());
             ((Criteria) instance).setPage(criteria.getPage());
             ((Criteria) instance).setSize(criteria.getSize());
         }
         return instance;
+    }
+
+    private Order toOrder(Sorting sorting) {
+        Sort.Direction direction = null;
+        if (sorting.getDirection().equals(Direction.ASC))
+            direction = Sort.Direction.ASC;
+        if (sorting.getDirection().equals(Direction.DESC))
+            direction = Sort.Direction.DESC;
+        if (("name").equals(sorting.getField()))
+            return new Order(direction, "passport." + sorting.getField());
+        else if (("category.id").equals(sorting.getField()))
+            return new Order(direction, "category");
+        else
+            return new Order(direction, sorting.getField());
     }
 }
